refactor(headless-cms): note about context.cms check

--- a/docs/key-topics/headless-cms/lifecycle-events.mdx
+++ b/docs/key-topics/headless-cms/lifecycle-events.mdx
@@ -39,6 +39,12 @@ This event is triggered before the installation of the Headless CMS and insertio
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onBeforeInstall.subscribe(async({tenant}) => {
 		await notifyAnotherSystemThatHeadlessCmsIsGettingInstalled({tenant});
     });
@@ -56,6 +62,12 @@ This event is triggered after the installation of the Headless CMS.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onAfterInstall.subscribe(async({tenant}) => {
 		await notifyAnotherSystemThatHeadlessCmsWasInstalled({tenant});
     });
@@ -80,6 +92,12 @@ This event is triggered before new group is stored into the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onBeforeGroupCreate.subscribe(async({group}) => {
         /**
 		 * For example, you do not want the group name to contain the character "a".
@@ -106,6 +124,12 @@ This event is triggered after new group is stored into the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onAfterGroupCreate.subscribe(async({group}) => {
 		/**
 		 * For example, notify another system that group was created.
@@ -129,6 +153,12 @@ This event is triggered before group is changed and stored into the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onBeforeGroupUpdate.subscribe(async({original, group}) => {
         /**
 		 * For example, we are not allowing group slug to be changed.
@@ -155,6 +185,12 @@ This event is triggered before group is changed and stored into the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onAfterGroupUpdate.subscribe(async({original, group}) => {
         /**
 		 * For example, notify another system that group was updated.
@@ -177,6 +213,12 @@ This event is triggered before group is deleted from the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onBeforeGroupDelete.subscribe(async({group}) => {
         /**
 		 * For example, we are not allowing group with slug "ungroupped" to be deleted.
@@ -202,6 +244,12 @@ This event is triggered after group is deleted from the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onAfterGroupDelete.subscribe(async({group}) => {
         /**
 		 * For example, notify another system that group was deleted.
@@ -226,6 +274,12 @@ This event is triggered before new model is stored into the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onBeforeModelCreate.subscribe(async({model}) => {
         /**
 		 * For example, you do not want the modelId to be any of the reserved IDs you might think of.
@@ -251,6 +305,12 @@ This event is triggered before new model is stored into the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onAfterModelCreate.subscribe(async({model}) => {
         /**
 		 * For example, you want to notify another system about new model.
@@ -274,6 +334,12 @@ This event is triggered before newly cloned model is stored into the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onBeforeModelCreateFrom.subscribe(async({original, model}) => {
         /**
 		 * For example, you want to clone only to another locale.
@@ -300,6 +366,12 @@ This event is triggered after newly cloned model is stored into the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onAfterModelCreateFrom.subscribe(async({original, model}) => {
         /**
 		 * For example, notify another system about cloned model.
@@ -323,6 +395,12 @@ This event is triggered before model is changed and stored into the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onBeforeModelUpdate.subscribe(async({model}) => {
         /**
 		 * For example, you want to leave all fields unlocked on all the models (you should never do that, of course, but you can if you want to).
@@ -347,6 +425,12 @@ This event is triggered after model is changed and stored into the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onAfterModelUpdate.subscribe(async({original,model}) => {
         /**
 		 * For example, you want to notify another system about model update.
@@ -369,6 +453,12 @@ This event is triggered before model is deleted from the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onBeforeModelDelete.subscribe(async({model}) => {
         /**
 		 * For example, you do not want to allow deletion of any model.
@@ -392,6 +482,12 @@ This event is triggered after model is deleted from the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onAfterModelDelete.subscribe(async({model}) => {
         /**
 		 * For example, you want to notify another system about deleted model.
@@ -425,6 +521,12 @@ This event is triggered before entry is stored into the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onBeforeEntryCreate.subscribe(async({model, entry}) => {
         /**
 		 * For example, your entry has a "slug" field, which must be unique. So we check if it is.
@@ -460,6 +562,12 @@ This event is triggered after entry is stored into the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onAfterEntryCreate.subscribe(async({model, entry}) => {
         /**
 		 * For example, notify another system about new entry.
@@ -486,6 +594,12 @@ This event is triggered before a new entry is created from originating entry and
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onBeforeEntryCreateRevision.subscribe(async({model, entry}) => {
         /**
 		 * For example, your entry has a "slug" field, which must be unique, but not within the entryId constraint.
@@ -524,6 +638,12 @@ This event is triggered after a new entry is created from originating entry and 
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onAfterEntryCreateRevision.subscribe(async({model, entry}) => {
         /**
 		 * For example, notify another system about new entry.
@@ -550,6 +670,12 @@ This event is triggered before entry is changed and stored into the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onBeforeEntryUpdate.subscribe(async({model, entry}) => {
         /**
 		 * For example, your entry has a "slug" field, which must be unique, but not within the entryId constraint.
@@ -589,6 +715,12 @@ This event is triggered after entry is changed and stored into the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onAfterEntryUpdate.subscribe(async({model, entry}) => {
         /**
 		 * For example, notify another system about updated entry.
@@ -613,6 +745,12 @@ This event is triggered before all entry revisions are deleted from the database
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onBeforeEntryDelete.subscribe(async({model, entry}) => {
         /**
 		 * For example, you do not allow entry with slug "index" to be deleted.
@@ -639,6 +777,12 @@ This event is triggered after all entry revisions are deleted from the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onAfterEntryDelete.subscribe(async({model, entry}) => {
         /**
 		 * For example, notify another system about deleted entry.
@@ -662,6 +806,12 @@ This event is triggered before entry revision is deleted from the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onBeforeEntryDeleteRevision.subscribe(async({model, entry}) => {
         /**
 		 * For example, you do not allow entry with version 1 to be deleted.
@@ -689,6 +839,12 @@ This event is triggered after entry revision is deleted from the database.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onAfterEntryDeleteRevision.subscribe(async({model, entry}) => {
         /**
 		 * For example, notify another system about deleted entry.
@@ -713,6 +869,12 @@ This event is triggered before entry is published.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onBeforeEntryPublish.subscribe(async({model, entry}) => {
         /**
 		 * For example, you do not allow entry with version 1 to be published.
@@ -740,6 +902,12 @@ This event is triggered after entry is published.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onAfterEntryPublish.subscribe(async({model, entry}) => {
         /**
 		 * For example, notify another system about published entry.
@@ -764,6 +932,12 @@ This event is triggered before entry is unpublished.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onBeforeEntryUnpublish.subscribe(async({model, entry}) => {
         /**
 		 * For example, you do not allow entry with version 1 to be unpublished.
@@ -791,6 +965,12 @@ This event is triggered after entry is unpublished.
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onAfterEntryUnpublish.subscribe(async({model, entry}) => {
         /**
 		 * For example, notify another system about unpublished entry.
@@ -815,6 +995,12 @@ This event is triggered before request changes entry object is stored to the dat
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onBeforeEntryRequestChanges.subscribe(async({model, entry}) => {
         /**
 		 * For example, you do not allow to request changes on entry with version 1.
@@ -841,6 +1027,12 @@ This event is triggered after request changes entry object is stored to the data
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onAfterEntryRequestChanges.subscribe(async({model, entry}) => {
         /**
 		 * For example, notify another system about requested changes on entry.
@@ -864,6 +1056,12 @@ This event is triggered before request review entry object is stored to the data
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onBeforeEntryRequestReview.subscribe(async({model, entry}) => {
         /**
 		 * For example, you do not allow to request review on entry with version 1.
@@ -891,6 +1089,12 @@ This event is triggered after request review entry object is stored to the datab
 
 ```typescript
 new ContextPlugin<CmsContext>(async context => {
+    /**
+     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+     */
+    if (!context.cms) {
+        return;
+    }
     context.cms.onAfterEntryRequestReview.subscribe(async({model, entry}) => {
         /**
 		 * For example, notify another system about requested review on entry.
@@ -916,6 +1120,12 @@ const handler = createHandler({
 	plugins: [
         // ... rest of plugins
 		new ContextPlugin<PbContext>(async context => {
+		    /**
+		     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+		     */
+		    if (!context.cms) {
+		        return;
+		    }
             context.cms.onBeforeInstall.subscribe(async({system}) => {
                 // do your magic here
             });
@@ -934,6 +1144,12 @@ const handler = createHandler({
 	plugins: [
         // ... rest of plugins
 		new ContextPlugin<PbContext>(async context => {
+		    /**
+		     * There is no context.cms on options request, so we skip adding lifecycle event subscription.
+		     */
+		    if (!context.cms) {
+		        return;
+		    }
             context.cms.onBeforeEntryCreate.subscribe(async({entry}) => {
                 // do your magic here
             });
@@ -945,4 +1161,9 @@ const handler = createHandler({
 
 :::warning
 Please, be aware that the order of subscribing matters, so if you want some event subscription to be executed before some other one, add it first.
+:::
+
+
+:::note
+The check condition for `context.cms` will not be required starting with version 5.22.0.
 :::
