chore: add another PR to the changelog

--- a/docs/release-notes/5.21.0/changelog.mdx
+++ b/docs/release-notes/5.21.0/changelog.mdx
@@ -54,6 +54,7 @@ Learn more about the framework in the [documentation](/docs/how-to-guides/webiny
 ### New Plugins ([#2165](https://github.com/webiny/webiny-js/pull/2165))
 
 A new framework means a new way of using plugins. Plugins are now plain React components. No more global registry with [POJOs](https://masteringjs.io/tutorials/fundamentals/pojo).
+
 > Your old plugins still work, and will continue to work until we provide a replacement for each one of them in form of a React component.
 
 To kick things off, we've implemented a couple of the most fundamental and commonly used plugins, like [`AddMenu`](/docs/how-to-guides/webiny-applications/admin-area/framework#the-addmenu-plugin), [`AddRoute`](/docs/how-to-guides/webiny-applications/admin-area/framework#the-addroute-plugin), [`AddLogo`](/docs/how-to-guides/webiny-applications/admin-area/change-logo), and a few others. [Naming conventions](/docs/how-to-guides/webiny-applications/admin-area/framework#naming-conventions) make things easier to discover, and you don't need to worry about the Typescript types, because now everything is provided to you via dedicated React components.
@@ -76,12 +77,16 @@ A good example of this can be found in our [Extend Page Settings](/docs/how-to-g
 
 We added the Webiny version header to every GraphQL response. By default, header is not added. To add it into the output, read our article about [environment variables](/docs/how-to-guides/environment-variables#enable-webiny-version-header-environment-variable).
 
+### Stop The Deploy Process On Errors in Deploy Hooks ([#2161](https://github.com/webiny/webiny-js/pull/2161))
+
+Prior to this PR, if one of the [deploy hooks](/docs/how-to-guides/deployment/build-and-deploy-hooks/) threw an error, the deploy process would not be stopped, which is incorrect. This PR ensures that any error encountered in the deploy process, including hooks, will stop the whole deploy process.
+
 ## Visual Improvements
 
 Some views received a bit of love, and now look visually more appealing. This is primarily related to the settings views, where the content was stretched to fill the width of the screen. Now it's limited to 700px by default, and makes the form look a lot better. The user account form was also slightly improved. See some examples in the screenshots below.
 
 <Gallery>
-    <Gallery.Image src={view3} title="Page Builder - Website Settings"/>
-    <Gallery.Image src={view1} title="Form Builder - reCaptcha Settings"/>
-    <Gallery.Image src={view2} title="Account Settings"/>
+  <Gallery.Image src={view3} title="Page Builder - Website Settings" />
+  <Gallery.Image src={view1} title="Form Builder - reCaptcha Settings" />
+  <Gallery.Image src={view2} title="Account Settings" />
 </Gallery>
