feat(changelog): note about text type field

--- a/docs/release-notes/5.22.0/changelog.mdx
+++ b/docs/release-notes/5.22.0/changelog.mdx
@@ -13,4 +13,5 @@ description: See what's new in Webiny version 5.22.0.
 
 ### Added Unique Validator For Cms Model Field ([#2166](https://github.com/webiny/webiny-js/pull/2166))
 
-We added the unique validator to field validators list. You can select it from the `Validators` tab when you are editing the field.
+We added the unique validator to field validators list on the `text` type field.
+You can select it from the `Validators` tab when you are editing the field.
