feat: theme manager setup

--- a/docs/enterprise/multi-tenancy/setup.mdx
+++ b/docs/enterprise/multi-tenancy/setup.mdx
@@ -1,7 +1,7 @@
 ---
 id: setup
 title: Setup Multi-Tenancy
-sidebar_label: "Setup Multi-Tenancy"
+sidebar_label: "Multi-Tenancy"
 keywords: ["webiny", "enterprise", "multi-tenancy"]
 description: Learn how to configure multi-tenancy in your Webiny project
 ---
