fix: use AddLogo without the Plugins wrapper

--- a/docs/how-to-guides/webiny-applications/admin-area/change-logo.mdx
+++ b/docs/how-to-guides/webiny-applications/admin-area/change-logo.mdx
@@ -30,7 +30,7 @@ To replace the logo, go to `apps/admin/code/src/App.tsx` in your Webiny project,
 
 ```tsx title="apps/admin/code/src/App.tsx" {2,6-7,13-15}
 import React from "react";
-import { Admin, Plugins, AddLogo } from "@webiny/app-serverless-cms";
+import { Admin, AddLogo } from "@webiny/app-serverless-cms";
 import { Cognito } from "@webiny/app-admin-users-cognito";
 import "./App.scss";
 
@@ -41,9 +41,7 @@ export const App = () => {
   return (
     <Admin>
       <Cognito />
-      <Plugins>
-        <AddLogo logo={<img src={logoPng} />} />
-      </Plugins>
+      <AddLogo logo={<img src={logoPng} />} />
     </Admin>
   );
 };
