docs: improved the guide description

--- a/docs/community-plugins/introduction.mdx
+++ b/docs/community-plugins/introduction.mdx
@@ -3,7 +3,7 @@ id: introduction
 title: Community Plugins
 sidebar_label: Introduction
 keywords: ["community", "plugins"]
-description: Commuinty Plugins
+description: Learn how to create or contribute to community plugins.
 ---
 
 :::tip **WHAT YOU'LL LEARN**
