feat(release-notes): add cms pr notes

--- a/docs/release-notes/5.22.0/changelog.mdx
+++ b/docs/release-notes/5.22.0/changelog.mdx
@@ -6,6 +6,11 @@ keywords: ["webiny", "version", "5.22.0", "changelog"]
 description: See what's new in Webiny version 5.22.0.
 ---
 
+import CenteredImage from "@components/CenteredImage";
+import multiplePredefinedValues from "./assets/multiple-predefined-values.png";
+import singlePredefinedValues from "./assets/single-predefined-values.png";
+import selectedSinglePredefinedValues from "./assets/selected-single-predefined-values.png";
+import selectedMultiplePredefinedValues from "./assets/selected-multiple-predefined-values.png";
 
 # Changes
 
@@ -15,3 +20,53 @@ description: See what's new in Webiny version 5.22.0.
 
 We added the unique validator to field validators list on the `text` type field.
 You can select it from the `Validators` tab when you are editing the field.
+
+### Added Default Field Values ([#2184](https://github.com/webiny/webiny-js/pull/2184))
+#### Boolean Field
+We added a choice of the default value to the boolean field ( true or false ).
+
+#### DateTime Field
+We added the possibility to choose if date field (includes date only, date + time, date + time with timezone and time subtypes) is populated by default in the Admin UI.
+Value being populated is the one from Javascript `new Date()`. We try to get users timezone, but if we do not, default is UTC +01:00.
+
+#### Text And Number Fields
+When user adds text or number field, with `Use predefined values` selected, we added a possibility to choose which of the values is the selected one by default.
+
+How it looks when creating the model field:
+<CenteredImage
+	shadow={false}
+	style={{maxWidth: 850 }}
+	alt="Predefined single value"
+	src={singlePredefinedValues}
+/>
+How it looks when creating the entry:
+<CenteredImage
+	shadow={false}
+	style={{maxWidth: 850 }}
+	alt="Predefined single selected value"
+	src={selectedSinglePredefinedValues}
+/>
+
+
+In case of `Use a list of...` selected, multiple initially selected values can be set.
+<CenteredImage
+	shadow={false}
+	style={{maxWidth: 850 }}
+	alt="Predefined multiple values"
+	src={multiplePredefinedValues}
+/>
+How it looks when creating the entry:
+<CenteredImage
+	shadow={false}
+	style={{maxWidth: 850 }}
+	alt="Predefined single selected value"
+	src={selectedMultiplePredefinedValues}
+/>
+
+When creating new entry in the Admin UI, be aware that if you unmark all the checkboxes or radio buttons, nothing will be sent to the API and the field value will be empty.
+If you require something to be sent to the API, please use validators for that field.
+
+
+### Fixed Date Clear Admin UI Crash ([#2185](https://github.com/webiny/webiny-js/pull/2185))
+We fixed a bug which occurred when user cleared the `dateTime` field.
+When user clears a `dateTime` field which has set to populate by default, that field is set to current date, time and timezone, if applicable.
