--- a/docs/release-notes/5.22.0/changelog.mdx
+++ b/docs/release-notes/5.22.0/changelog.mdx
@@ -22,51 +22,63 @@ We added the unique validator to field validators list on the `text` type field.
 You can select it from the `Validators` tab when you are editing the field.
 
 ### Added Default Field Values ([#2184](https://github.com/webiny/webiny-js/pull/2184))
+
 #### Boolean Field
+
 We added a choice of the default value to the boolean field ( true or false ).
 
 #### DateTime Field
+
 We added the possibility to choose if date field (includes date only, date + time, date + time with timezone and time subtypes) is populated by default in the Admin UI.
 Value being populated is the one from Javascript `new Date()`. We try to get users timezone, but if we do not, default is UTC +01:00.
 
 #### Text And Number Fields
+
 When user adds text or number field, with `Use predefined values` selected, we added a possibility to choose which of the values is the selected one by default.
 
 How it looks when creating the model field:
+
 <CenteredImage
-	shadow={false}
-	style={{maxWidth: 850 }}
-	alt="Predefined single value"
-	src={singlePredefinedValues}
+  shadow={false}
+  style={{ maxWidth: 850 }}
+  alt="Predefined single value"
+  src={singlePredefinedValues}
 />
 How it looks when creating the entry:
 <CenteredImage
-	shadow={false}
-	style={{maxWidth: 850 }}
-	alt="Predefined single selected value"
-	src={selectedSinglePredefinedValues}
+  shadow={false}
+  style={{ maxWidth: 850 }}
+  alt="Predefined single selected value"
+  src={selectedSinglePredefinedValues}
 />
-
 
 In case of `Use a list of...` selected, multiple initially selected values can be set.
+
 <CenteredImage
-	shadow={false}
-	style={{maxWidth: 850 }}
-	alt="Predefined multiple values"
-	src={multiplePredefinedValues}
+  shadow={false}
+  style={{ maxWidth: 850 }}
+  alt="Predefined multiple values"
+  src={multiplePredefinedValues}
 />
 How it looks when creating the entry:
 <CenteredImage
-	shadow={false}
-	style={{maxWidth: 850 }}
-	alt="Predefined single selected value"
-	src={selectedMultiplePredefinedValues}
+  shadow={false}
+  style={{ maxWidth: 850 }}
+  alt="Predefined single selected value"
+  src={selectedMultiplePredefinedValues}
 />
 
 When creating new entry in the Admin UI, be aware that if you unmark all the checkboxes or radio buttons, nothing will be sent to the API and the field value will be empty.
 If you require something to be sent to the API, please use validators for that field.
 
-
 ### Fixed Date Clear Admin UI Crash ([#2185](https://github.com/webiny/webiny-js/pull/2185))
+
 We fixed a bug which occurred when user cleared the `dateTime` field.
 When user clears a `dateTime` field which has set to populate by default, that field is set to current date, time and timezone, if applicable.
+
+### Upgraded Webpack to version 5 ([#2101](https://github.com/webiny/webiny-js/pull/2101))
+
+We use webpack to build API lambda functions and react apps. We finally upgraded it to version 5.
+Along with this, we added [react-refresh](https://www.npmjs.com/package/react-refresh) for better hot module reloading and development experience.
+We are also working on simplifying project structure and removing boilerplate code.
+For example in this release some of babel configuration is no longer necessary.
