fix: remove localhost from article URL

--- a/docs/enterprise/multi-tenancy/okta-integration.mdx
+++ b/docs/enterprise/multi-tenancy/okta-integration.mdx
@@ -318,7 +318,7 @@ yarn webiny deploy api --env=dev && yarn webiny deploy apps/admin --env=dev
 
 ## 5) Configuring App Client ID for New Tenants
 
-Once your project is deployed, open your Admin app. If everything went well, you should be presented with an Okta login screen. The Okta user you're using to login must have access to the root tenant app client, and have the appropriate claims assigned to his JWT token so he can be mapped to the correct security group, as described in the [Configure Okta in the GraphQL API](http://localhost:3000/docs/enterprise/multi-tenancy/okta-integration#3-configure-okta-in-the-graphql-api) section.
+Once your project is deployed, open your Admin app. If everything went well, you should be presented with an Okta login screen. The Okta user you're using to login must have access to the root tenant app client, and have the appropriate claims assigned to his JWT token so he can be mapped to the correct security group, as described in the [Configure Okta in the GraphQL API](/docs/enterprise/multi-tenancy/okta-integration#3-configure-okta-in-the-graphql-api) section.
 
 :::tip Recommendation
 We recommend that your main root tenant admin user has a `full-access` group assignment. Think of this user as a **super admin** user who can run system setup, create new tenants, etc. A `full-access` security group is always present in the system, so you don't need to create it manually.
