feat: enterprise articles

--- a/docs/how-to-guides/webiny-applications/admin-area/change-logo.mdx
+++ b/docs/how-to-guides/webiny-applications/admin-area/change-logo.mdx
@@ -28,7 +28,7 @@ Your logo will be visible in two locations: in the top app bar, and in the navig
 
 To replace the logo, go to `apps/admin/code/src/App.tsx` in your Webiny project, and apply the following code changes:
 
-```tsx title="apps/admin/code/src/App.tsx" {2,6-7,13-15}
+```tsx title="apps/admin/code/src/App.tsx" {2,6-7,13}
 import React from "react";
 import { Admin, Plugins, AddLogo } from "@webiny/app-serverless-cms";
 import { Cognito } from "@webiny/app-admin-users-cognito";
@@ -41,9 +41,7 @@ export const App = () => {
   return (
     <Admin>
       <Cognito />
-      <Plugins>
-        <AddLogo logo={<img src={logoPng} />} />
-      </Plugins>
+      <AddLogo logo={<img src={logoPng} />} />
     </Admin>
   );
 };
