--- a/docs/enterprise/multi-tenancy.mdx
+++ b/docs/enterprise/multi-tenancy.mdx
@@ -1,7 +1,7 @@
 ---
-id: setup
+id: multi-tenancy
 title: Setup Multi-Tenancy
-sidebar_label: "Setup Multi-Tenancy"
+sidebar_label: "Multi-Tenancy"
 keywords: ["webiny", "enterprise", "multi-tenancy"]
 description: Learn how to configure multi-tenancy in your Webiny project
 ---
@@ -20,12 +20,12 @@ This feature is available since Webiny **v5.19.0**.
 :::
 
 import CenteredImage from "@components/CenteredImage";
-import importTMApi from "./setup/import-tenant-manager-api.png";
-import importTMReact from "./setup/import-tenant-manager-react.png";
-import lambdaDelete from "./setup/lambda-delete-error.png";
-import newTenantForm from "./setup/new-tenant.png";
-import rootTenantLabel from "./setup/root-tenant-settings.png";
-import rootTenantDialog from "./setup/tenant-settings-dialog.png";
+import importTMApi from "./multi-tenancy/import-tenant-manager-api.png";
+import importTMReact from "./multi-tenancy/import-tenant-manager-react.png";
+import lambdaDelete from "./multi-tenancy/lambda-delete-error.png";
+import newTenantForm from "./multi-tenancy/new-tenant.png";
+import rootTenantLabel from "./multi-tenancy/root-tenant-settings.png";
+import rootTenantDialog from "./multi-tenancy/tenant-settings-dialog.png";
 
 ## Overview
 
@@ -249,12 +249,6 @@ For the `acmCertificateArn`, use the ARN of the certificate you created in step 
 
 For `aliases`, enter the custom domains supported by your certificate. You can use wildcards to support multiple subdomains.
 
-:::danger Important
-Don't forget to CNAME your custom domain to the CloudFront distribution of the `website` application.
-
-To find your CloudFront website domain, run `yarn webiny info --env=dev` and look for the `Website URL`.
-:::
-
 ## 7) Deploy Your Project
 
 Now it's time to deploy the entire project. We need to deploy everything: `api`, `admin`, and `website`. The easiest way to do all 3 at once, is by running the following:
@@ -262,6 +256,12 @@ Now it's time to deploy the entire project. We need to deploy everything: `api`,
 ```shell
 yarn webiny deploy --env=dev
 ```
+
+:::danger Important
+Don't forget to CNAME your custom domain to the CloudFront distribution of the `website` application.
+
+To find your CloudFront website domain, run `yarn webiny info --env=dev` and look for the `Website URL`.
+:::
 
 ## 8) Configure Custom Domains For Tenants
 
@@ -309,3 +309,24 @@ You're probably seeing the following error:
 <CenteredImage src={lambdaDelete} title="Error Deleting Lambda@Edge Function." />
 
 Lambda@Edge functions are replicated to all AWS Edge locations. This means that this particular function will not be deleted until AWS removes it from all the Edge locations. Even thought this error looks terrible, your deploy went just fine. Give it a couple of minutes, and re-deploy. You'll see that, after some time, your old Lambda@Edge function will be deleted successfully.
+
+### Pulumi throws an error when creating the website Cloudfront distribution
+
+You can't have the same FQDN configured in more than 1 CF distribution under the same account. If you do, then you will see the following error.
+
+```shell
+ +  aws:cloudfront:Distribution delivery **creating failed** error: 1 error occurred:
+ +  pulumi:pulumi:Stack website-dev creating error: update failed
+ +  pulumi:pulumi:Stack website-dev **creating failed** 1 error
+
+Diagnostics:
+  pulumi:pulumi:Stack (website-dev):
+    error: update failed
+
+  aws:cloudfront:Distribution (delivery):
+    error: 1 error occurred:
+    	* error creating CloudFront Distribution: CNAMEAlreadyExists: One or more of the CNAMEs you provided are already associated with a different resource.
+    	status code: 409, request id: 0ad55a32-0a28-4411-abee-326808393fb9
+```
+
+Go back to the CF distribution where that hostname is configured, remove it - if it's safe to do so - and re-run the webiny deploy command.
