fix: simplify and reword text

--- a/docs/release-notes/5.22.0/changelog.mdx
+++ b/docs/release-notes/5.22.0/changelog.mdx
@@ -16,25 +16,29 @@ import selectedMultiplePredefinedValues from "./assets/selected-multiple-predefi
 
 ## Headless CMS
 
-### Added Unique Validator For Cms Model Field ([#2166](https://github.com/webiny/webiny-js/pull/2166))
+### Added Unique Validator For Text Field ([#2166](https://github.com/webiny/webiny-js/pull/2166))
 
-We added the unique validator to field validators list on the `text` type field.
-You can select it from the `Validators` tab when you are editing the field.
+A new **unique** validator has been introduced to the **text** type field.
+
+As the name itself suggests, when enabled on a particular field, the validator will ensure two different content entries cannot have the same value for it.
+
+The validator can be enabled via the **Validators** tab in the field options screen.
 
 ### Added Default Field Values ([#2184](https://github.com/webiny/webiny-js/pull/2184))
 
 #### Boolean Field
 
-We added a choice of the default value to the boolean field ( true or false ).
+We added the ability to set the default value for the boolean field (**true** or **false**).
 
-#### DateTime Field
+#### Date/time Fields
 
-We added the possibility to choose if date field (includes date only, date + time, date + time with timezone and time subtypes) is populated by default in the Admin UI.
-Value being populated is the one from Javascript `new Date()`. We try to get users timezone, but if we do not, default is UTC +01:00.
+All of the date/time-related fields can now optionally be set with the current date/time as their default value.
+
+If enabled, note that the default value will be set on the frontend side, while creating a new content entry. Essentially, this way user's timezone can also be taken into consideration upon setting field's default value.
 
 #### Text And Number Fields
 
-When user adds text or number field, with `Use predefined values` selected, we added a possibility to choose which of the values is the selected one by default.
+Upon creating a text or number field with the **Use predefined values**  option enabled, users can now choose which of the defined value should be the initially selected one.
 
 How it looks when creating the model field:
 
@@ -52,7 +56,7 @@ How it looks when creating the entry:
   src={selectedSinglePredefinedValues}
 />
 
-In case of `Use a list of...` selected, multiple initially selected values can be set.
+Also, in case the **Use as list of...** option is enabled, multiple initially selected values can be set too.
 
 <CenteredImage
   shadow={false}
@@ -68,13 +72,11 @@ How it looks when creating the entry:
   src={selectedMultiplePredefinedValues}
 />
 
-When creating new entry in the Admin UI, be aware that if you unmark all the checkboxes or radio buttons, nothing will be sent to the API and the field value will be empty.
-If you require something to be sent to the API, please use validators for that field.
+When creating new content entry in the Admin app, be aware that if you unmark all the checkboxes or radio buttons, the field's value will end up being empty. To prevent that from happening, you can enable the **Required** field validator.
 
 ### Fixed Date Clear Admin UI Crash ([#2185](https://github.com/webiny/webiny-js/pull/2185))
 
-We fixed a bug which occurred when user cleared the `dateTime` field.
-When user clears a `dateTime` field which has set to populate by default, that field is set to current date, time and timezone, if applicable.
+We fixed an issue which woud occur when a user tried to clear the value from an existing **Date/Time** field. From now on, the field's value will either be completely cleared, or it will be set to current date/time if the new [default value option](/docs/release-notes/5.22.0/changelog#datetime-fields) has been enabled.
 
 ### Upgraded Webpack to version 5 ([#2101](https://github.com/webiny/webiny-js/pull/2101))
 
