fix: simplify and reword text

--- a/docs/release-notes/5.22.0/changelog.mdx
+++ b/docs/release-notes/5.22.0/changelog.mdx
@@ -76,7 +76,7 @@ When creating new content entry in the Admin app, be aware that if you unmark al
 
 ### Fixed Date Clear Admin UI Crash ([#2185](https://github.com/webiny/webiny-js/pull/2185))
 
-We fixed an issue which woud occur when a user tried to clear the value from an existing **Date/Time** field. From now on, the field's value will either be completely cleared, or it will be set to current date/time if the new [default value option](/docs/release-notes/5.22.0/changelog#datetime-fields) has been enabled.
+We fixed an issue which would occur when a user tried to clear the value from an existing **Date/Time** field. From now on, the field's value will either be completely cleared, or it will be set to current date/time if the new [default value option](/docs/release-notes/5.22.0/changelog#datetime-fields) has been enabled.
 
 ### Upgraded Webpack to version 5 ([#2101](https://github.com/webiny/webiny-js/pull/2101))
 
