fix: fixes after review

--- a/docs/release-notes/5.22.0/changelog.mdx
+++ b/docs/release-notes/5.22.0/changelog.mdx
@@ -78,9 +78,16 @@ When creating new content entry in the Admin app, be aware that if you unmark al
 
 We fixed an issue which would occur when a user tried to clear the value from an existing **Date/Time** field. From now on, the field's value will either be completely cleared, or it will be set to current date/time if the new [default value option](/docs/release-notes/5.22.0/changelog#datetime-fields) has been enabled.
 
-### Upgraded Webpack to version 5 ([#2101](https://github.com/webiny/webiny-js/pull/2101))
+### Upgraded Webpack to Version 5 ([#2101](https://github.com/webiny/webiny-js/pull/2101))
 
-We use webpack to build API lambda functions and react apps. We finally upgraded it to version 5.
-Along with this, we added [react-refresh](https://www.npmjs.com/package/react-refresh) for better hot module reloading and development experience.
-We are also working on simplifying project structure and removing boilerplate code.
-For example in this release some of babel configuration is no longer necessary.
+We use Webpack to build API lambda functions and React apps. We finally upgraded it to version 5.
+
+### Added `react-refresh` ([#2101](https://github.com/webiny/webiny-js/pull/2101))
+
+We added [react-refresh](https://www.npmjs.com/package/react-refresh) module for better hot module reloading and development experience
+in our React applications.
+
+### Simplified Babel Configuration ([#2101](https://github.com/webiny/webiny-js/pull/2101))
+
+We removed a requirement to have `babel-plugin-named-asset-import` in project's Babel configuration.
+It can also be safely deleted from project dependencies.
